--- a/style.css
+++ b/style.css
@@ -324,6 +324,10 @@ border-radius: 34px;
 border-radius: 50%;
 }
 
+.no-select {
+  user-select: none;
+}
+
 @media (min-width: 650px) {
   .panel {
     width: 80vw;
@@ -344,5 +348,4 @@ border-radius: 50%;
     width: 60vw;
     left: 20vw;
   }
-  
 }
